deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-mainline-perl-deployobj
 labels:
  app: app-v2
spec:
 replicas: 2
 selector:
  matchLabels:
     app: app-v2
 template:
  metadata:
   labels:
     app: app-v2
  spec:
   containers:
    - name: deploy2container
      image: nginx:mainline-perl
      ports:
       - containerPort: 80
