pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: nginx-pod
    labels:
       name: nginx-pod
       version: v1
spec:
    containers:
       - name: nginx-container
         image: nginx:latest
         ports:
           - containerPort: 80
