service.yml
apiVersion: v1
kind: Service
metadata:
 name: nginx-serviceobj
 labels:
  app: app-v1
spec:
 selector:
   app: app-v1
 ports:
 - port: 80
   nodePort: 30003
   protocol: TCP
 type: NodePort
